--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Startup</h1>
+        <h1>Welcome to polyrythmd</h1>
+        <p>for the music critic in all of us</p>
         <nav>
-            <ul>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#signup">Sign Up</a></li>
-            </ul>
-        </nav>
+            <a href="/pages/about.html">About</a>
     </header>
+    <main>
+
+    </main>
 </body>
 </html>
