finished about html

--- a/pages/about.html
+++ b/pages/about.html
@@ -27,11 +27,17 @@
                 He founded polyrythmd to create a space where music lovers can share their opinions and discover new tunes.</p>
             <img src="/images/amur_bashirov_about_pfp.jpg" alt="Amur Bashirov" style="width:200px;height:200px;">    
             <h3>Amur Bashirov - TA & Chief Advisor</h3>
-            /*insert bio here if you want, delete your section if you dont want to be on here, I thought it would be funny*/
+            <!--insert bio here if you want, delete your section if you dont want to be on here, I thought it would be funny-->
             <p></p>
         </section>
         <section>
             <h2>Contact Us</h2>
-            <p>If you have any questions, feedback, or suggestions, please feel free to reach out to us at
+            <p>If you have any questions, feedback, or suggestions, please feel free to reach out to us at </p>
+            <p><a href="mailto:polyrhythmd@gmail.com">polyrhythmd@gmail.com</a></p>
+        </section>
+    </main> 
+    <footer>
+        <p>&copy; 2025 polyrythmd. All rights reserved.</p>
+    </footer>
 </body>
 </html>
