--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
         <p>for the music critic in all of us</p>
         <nav>
             <a href="/pages/about.html">About</a>
+            <a href="/pages/auth/register.html">Register</a>
+            <a href="/pages/auth/login.html">Login</a>
+            <a href="/pages/music/artist.html">Artist</a>
+            <a href="/pages/music/album.html">Album</a>
+            <a href="/pages/music/song.html">Song</a>
+            <a href="/pages/music/post.html">Post</a>
+            <a href="/pages/music/search.html">Search</a>
+            <a href="/pages/user/profile.html">Profile</a>
+            <a href="/pages/user/feed.html">feed</a>
+        </nav>
     </header>
     <main>
 
