--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="/pages/music/post.html">Post</a>
             <a href="/pages/music/search.html">Search</a>
             <a href="/pages/user/profile.html">Profile</a>
+            <a href="/pages/user/edit_profile.html">Edit Profile</a>
             <a href="/pages/user/feed.html">feed</a>
         </nav>
     </header>
