--- a/pages/music/album.html
+++ b/pages/music/album.html
@@ -11,71 +11,8 @@
     <p>Award-winning album by Tyler, the Creator, released in 2019.</p>
     <p>Average Rating: ★★★★☆ (4.5)</p>
     <p>Total Reviews: 1500</p>
-
-    <div>
-        <table>
-        <tr>
-          <th>IGOR'S THEME</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>EARFQUAKE</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>I THINK</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>EXACTLY WHAT YOU RUN FROM YOU END UP CHASING</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>RUNNING OUT OF TIME</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>NEW MAGIC WAND</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>A BOY IS A GUN</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>PUPPET</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>WHAT'S GOOD</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>GONE,GONE / THANK YOU</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>I DON'T LOVE YOU ANYMORE</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-        <tr>
-          <th>ARE WE STILL FRIENDS</th>
-          <th>4/5</th>
-          <th><button onclick="window.location.href='/pages/music/post.html'">Review song</button></th>
-        </tr>
-      </table>
-    </div>
+    <button type="button" onclick="window.location.href='/music/review.html'">Write a Review</button>
+    <hr>  
 
     <div>
         <h2>Reviews</h2>
