finished  review.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="/pages/auth/register.html">Register</a>
             <a href="/pages/auth/login.html">Login</a>
             <a href="/pages/music/album.html">Album</a>
-            <a href="/pages/music/post.html">Post</a>
+            <a href="/pages/music/review.html">Review</a>
             <a href="/pages/music/search.html">Search</a>
             <a href="/pages/user/profile.html">Profile</a>
             <a href="/pages/user/edit_profile.html">Edit Profile</a>
