fixed connection between html files and added api and webhook integration

--- a/pages/music/album.html
+++ b/pages/music/album.html
@@ -5,6 +5,7 @@
     <title>Album Viewer</title>
 </head>
 <body>
+    <p>The title, artist, img, & bio will be from spotify api</p>
     <h1>IGOR</h1>
     <h3>by Tyler, the Creator</h3>
     <img src="igor.jpg" alt="Album Art" width="200" height="200">
@@ -29,6 +30,9 @@
             <p>- IndieFan456</p>
         </div>
         <!-- More reviews can be added here -->
+    </div>
+    <div>
+        <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
     </div>
 </body>
 </html>
