--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -19,7 +19,7 @@
             </div>
             <div>
                 <button type="button" onclick="window.location.href='/auth/register.html'">Register</button>
-                <button type="button" onclick="window.location.href='/profile.html'">Login</button>
+                <button type="button" onclick="window.location.href='/pages/user/profile.html'">Login</button>
             </div>
         </form>
     </div>
