--- a/pages/music/review.html
+++ b/pages/music/review.html
@@ -66,7 +66,7 @@
     </div>
 
     <div>
-        <button type="submit">Submit Review</button>
+        <button type="submit" onclick="window.location.href='/pages/user/feed.html'">Submit Review</button>
     </div>
 </body>
 </html>
