--- a/pages/user/edit_profile.html
+++ b/pages/user/edit_profile.html
@@ -56,7 +56,7 @@
             </div>
             <div>
                 <button type="button" onclick="window.location.href='/index.html'">Return</button>
-                <button type="button" onclick="window.location.href='/profile.html'">Register</button>
+                <button type="button" onclick="window.location.href='/pages/user/profile.html'">Register</button>
             </div>
         </form>
     </div>
