--- a/pages/music/search.html
+++ b/pages/music/search.html
@@ -9,7 +9,7 @@
     <label for="album-search">Search Album:</label>
     <input type="text" id="album-search" name="album-search" placeholder="Enter album name">
     <div>
-        <button type="button" onclick="window.location.href='/index.html'">Back</button>
+        <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
         <button type="button" onclick="window.location.href='/pages/music/album.html'">Search</button>
     </div>
 </body>
