--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -18,7 +18,7 @@
                 <input id="password" name="password" type="password" required>
             </div>
             <div>
-                <button type="button" onclick="window.location.href='/auth/register.html'">Register</button>
+                <button type="button" onclick="window.location.href='/pages/auth/register.html'">Register</button>
                 <button type="button" onclick="window.location.href='/pages/user/profile.html'">Login</button>
             </div>
         </form>
