html formatting uniformity

--- a/pages/music/album.html
+++ b/pages/music/album.html
@@ -5,14 +5,16 @@
     <title>Album Viewer</title>
 </head>
 <body>
-    <p>The title, artist, img, & bio will be from spotify api</p>
-    <h1>IGOR</h1>
-    <h3>by Tyler, the Creator</h3>
-    <img src="igor.jpg" alt="Album Art" width="200" height="200">
-    <p>Award-winning album by Tyler, the Creator, released in 2019.</p>
-    <p>Average Rating: ★★★★☆ (4.5)</p>
-    <p>Total Reviews: 1500</p>
-    <button type="button" onclick="window.location.href='/music/review.html'">Write a Review</button>
+    <div>
+        <p>The title, artist, img, & bio will be from spotify api</p>
+        <h1>IGOR</h1>
+        <h3>by Tyler, the Creator</h3>
+        <img src="igor.jpg" alt="Album Art" width="200" height="200">
+        <p>Award-winning album by Tyler, the Creator, released in 2019.</p>
+        <p>Average Rating: ★★★★☆ (4.5)</p>
+        <p>Total Reviews: 1500</p>
+        <button type="button" onclick="window.location.href='/music/review.html'">Write a Review</button>
+    </div>
     <hr>  
 
     <div>
