--- a/pages/user/feed.html
+++ b/pages/user/feed.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <div>
+    <section>
         <h1>Friend Feed</h1>
         <div>
             <h3>Great Album!</h3>
@@ -20,30 +20,32 @@
             <p>I found the album to be a bit too experimental for my taste, but I can see why others enjoy it.</p>
             <p>- IndieFan456</p>
         </div>
-    </div>
-    <div>
-        <h2>Quick Actions</h2>
-        <button type="button" onclick="window.location.href='/pages/user/profile.html'">View Profile</button>
-        <button type="button" onclick="window.location.href='/pages/music/search.html'">Search Albums</button>
-        <button type="button" onclick="window.location.href='/pages/music/review.html'">Write a Review</button>
-    </div>
-    <div>
-        <h3>Top Friends' Spotify Tracks</h3>
-        <ul>
-            <li>
-                <p><strong>Alice:</strong>"Blinding Lights" by The Weeknd</p>
-            </li>
-            <li>
-                <p><strong>Bob:</strong>"Mr. Brightside" by The Killers</p>
-            </li>
-            <li>
-                <p><strong>Charlie:</strong>"Levitating" by Dua Lipa</p>
-            </li>
-        </ul>
-    </div>
-    <div>
-        <p>I will have a webhook here that will notify when a friend has reviewed an album</p>
-    </div>
+    </section>
+    <section>
+        <div>
+            <h2>Quick Actions</h2>
+            <button type="button" onclick="window.location.href='/pages/user/profile.html'">View Profile</button>
+            <button type="button" onclick="window.location.href='/pages/music/search.html'">Search Albums</button>
+            <button type="button" onclick="window.location.href='/pages/music/review.html'">Write a Review</button>
+        </div>
+        <div>
+            <h3>Top Friends' Spotify Tracks</h3>
+            <ul>
+                <li>
+                    <p><strong>Alice:</strong>"Blinding Lights" by The Weeknd</p>
+                </li>
+                <li>
+                    <p><strong>Bob:</strong>"Mr. Brightside" by The Killers</p>
+                </li>
+                <li>
+                    <p><strong>Charlie:</strong>"Levitating" by Dua Lipa</p>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <p>I will have a webhook here that will notify when a friend has reviewed an album</p>
+        </div>
+    </section>
     
 </body>
 </html>
