api, db, and webhook distinction in red

--- a/pages/auth/register.html
+++ b/pages/auth/register.html
@@ -6,7 +6,7 @@
     <title>Register</title>
 </head>
 <body>
-
+    <p style="color: red;">Data from here will be stored in DB four auth</p>
     <h2>Register</h2>
     <form>
         <div>
