--- a/pages/music/review.html
+++ b/pages/music/review.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Album Review</h1>
-
+    <p style="color: red;">Search and album cover will be helped by spotify api</p>
     <label for="album-search">Search Album:</label>
     <input type="text" id="album-search" name="album-search" placeholder="Enter album name">
 
@@ -14,6 +14,7 @@
         <h2>Album Cover</h2>
         <img src="https://via.placeholder.com/200x200?text=Album+Cover" alt="Album Cover" width="200" height="200">
     </div>
+    <p style="color: red;">Data from here will stored be in DB</p>
 
     <div>
         <h2>Rating</h2>
