--- a/pages/music/search.html
+++ b/pages/music/search.html
@@ -5,6 +5,7 @@
     <title>Album Review</title>
 </head>
 <body>
+    <p style="color: red;">Search will be helped by spotify api</p>
     <h1>Album Search</h1>
     <label for="album-search">Search Album:</label>
     <input type="text" id="album-search" name="album-search" placeholder="Enter album name">
