--- a/pages/user/profile.html
+++ b/pages/user/profile.html
@@ -5,6 +5,7 @@
     <title>User Profile</title>
 </head>
 <body>
+    <p style="color: red;">Data here will be in DB</p>
     <h1>Hey John</h1>
     <img src="/images/blank_pfp.jpg" alt="Profile Photo" width="150" height="150">
     <ul>
