--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 </head>
 <body>
-
+    <p style="color: red;">Data from here will be checked in DB for login</p>
     <h2>Login</h2>
     <form>
         <div>
