--- a/pages/music/album.html
+++ b/pages/music/album.html
@@ -5,12 +5,14 @@
     <title>Album Viewer</title>
 </head>
 <body>
+
     <div>
-        <p>The title, artist, img, & bio will be from spotify api</p>
+        <p style="color: red;">Data from here will be from spotify api/p>
         <h1>IGOR</h1>
         <h3>by Tyler, the Creator</h3>
         <img src="igor.jpg" alt="Album Art" width="200" height="200">
         <p>Award-winning album by Tyler, the Creator, released in 2019.</p>
+        <p style="color: red;">Data from here will be in DB</p>
         <p>Average Rating: ★★★★☆ (4.5)</p>
         <p>Total Reviews: 1500</p>
         <button type="button" onclick="window.location.href='/music/review.html'">Write a Review</button>
@@ -18,6 +20,7 @@
     <hr>  
 
     <div>
+        <p style="color: red;">Data from here will be in DB</p>
         <h2>Reviews</h2>
         <div>
             <h3>Great Album!</h3>
