--- a/pages/user/edit_profile.html
+++ b/pages/user/edit_profile.html
@@ -6,7 +6,7 @@
     <title>Register</title>
 </head>
 <body>
-
+    <p style="color: red;">Data from here will be edited in DB</p>
     <h2>Register</h2>
     <form>
         <div>
