--- a/pages/user/feed.html
+++ b/pages/user/feed.html
@@ -5,7 +5,7 @@
     <title>Social Media Feed</title>
 </head>
 <body>
-
+    <p style="color: red;">Data from here will be in DB</p>
     <section>
         <h1>Friend Feed</h1>
         <div>
@@ -28,6 +28,7 @@
             <button type="button" onclick="window.location.href='/pages/music/search.html'">Search Albums</button>
             <button type="button" onclick="window.location.href='/pages/music/review.html'">Write a Review</button>
         </div>
+        <p style="color: red;">Data from here will be from spotify api</p>
         <div>
             <h3>Top Friends' Spotify Tracks</h3>
             <ul>
@@ -43,7 +44,7 @@
             </ul>
         </div>
         <div>
-            <p>I will have a webhook here that will notify when a friend has reviewed an album</p>
+            <p style="color: red;">Data from here will be in DB and webhook when a friend has reviewed</p>
         </div>
     </section>
     
