--- a/pages/music/album.html
+++ b/pages/music/album.html
@@ -7,7 +7,9 @@
 <body>
 
     <div>
-        <p style="color: red;">Data from here will be from spotify api/p>
+
+        <p style="color: red;">Data from here will be from spotify api</p>
+
         <h1>IGOR</h1>
         <h3>by Tyler, the Creator</h3>
         <img src="igor.jpg" alt="Album Art" width="200" height="200">
