--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <title>Login</title>
+    <link rel="icon" href="polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <p style="color: red;">Data from here will be checked in DB for login</p>
