small changes to html layout for css cohesion

--- a/pages/user/feed.html
+++ b/pages/user/feed.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <p style="color: red;">Data from here will be in DB</p>
+    <h1>Friend Feed</h1>
     <section>
-        <h1>Friend Feed</h1>
         <div>
             <h3>Great Album!</h3>
             <p>★★★★☆</p>
             <p>This album is a masterpiece. The production quality and lyrical depth are outstanding.</p>
             <p>- MusicLover123</p>
-        </div>
+        </div>    
+    <section>
         <div>
             <h3>Not my style</h3>
             <p>★★☆☆☆</p>
@@ -24,7 +25,7 @@
             <p>- IndieFan456</p>
         </div>
     </section>
-    <section>
+    <aside>
         <div>
             <h2>Quick Actions</h2>
             <button type="button" onclick="window.location.href='/pages/user/profile.html'">View Profile</button>
@@ -49,7 +50,7 @@
         <div>
             <p style="color: red;">Data from here will be in DB and webhook when a friend has reviewed</p>
         </div>
-    </section>
+    </aside>
     
 </body>
 </html>
