--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -9,18 +9,16 @@
 </head>
 <body>
     <p style="color: red;">Data from here will be checked in DB for login</p>
-    <h2>Login</h2>
     <form>
+        <h2>Login</h2>
         <div>
-            <label for="username">Username</label>
-            <input id="username" name="username" type="text" required>
+            <input id="username" name="username" type="text" placeholder="Username" required>
         </div>
         <div>
-            <label for="password">Password</label>
-            <input id="password" name="password" type="password" required>
+            <input id="password" name="password" type="password" placeholder="Password" required>
         </div>
         <div>
-            <button type="button" onclick="window.location.href='/pages/auth/register.html'">Register</button>
+              <button type="button" onclick="window.location.href='/pages/auth/register.html'">Register</button>
             <button type="button" onclick="window.location.href='/pages/user/profile.html'">Login</button>
         </div>
     </form>
