--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -17,8 +17,8 @@
             <input id="password" name="password" type="password" placeholder="Password" required>
         </div>
         <div>
-              <button type="button" onclick="window.location.href='/pages/user/profile.html'">Log in</button>
-              <button type="button" onclick="window.location.href='/pages/auth/register.html'">Register</button>
+              <button type="button ring" onclick="window.location.href='/pages/user/profile.html'">Log in</button>
+              <button type="button ring" onclick="window.location.href='/pages/auth/register.html'">Register</button>
         </div>
     </form>
 
