--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -11,14 +11,14 @@
     <form>
         <h2>Login</h2>
         <div>
-            <input id="username" name="username" type="text" placeholder="Username" required>
+            <input id="username" name="username" type="standard" placeholder="Username" required>
         </div>
         <div>
-            <input id="password" name="password" type="password" placeholder="Password" required>
+            <input id="password" name="password" type="standard" placeholder="Password" required>
         </div>
         <div>
-              <button type="button ring" onclick="window.location.href='/pages/user/profile.html'">Log in</button>
-              <button type="button ring" onclick="window.location.href='/pages/auth/register.html'">Register</button>
+              <button type="button aura" onclick="window.location.href='/pages/user/profile.html'">Log in</button>
+              <button type="button aura" onclick="window.location.href='/pages/auth/register.html'">Register</button>
         </div>
     </form>
 
