--- a/pages/auth/register.html
+++ b/pages/auth/register.html
@@ -13,21 +13,21 @@
     <form>
         <div>
             <label for="firstname">First Name</label>
-            <input id="firstname" name="firstname" type="text" required>
+            <input id="firstname" name="firstname" type="standard" required>
             <label for="lastname">Last Name</label>
-            <input id="lastname" name="lastname" type="text" required>
+            <input id="lastname" name="lastname" type="standard" required>
         </div>
         <div>
             <label for="birthday">Birthday</label>
-            <input id="birthday" name="birthday" type="date" required>
+            <input id="birthday" name="birthday" type="standard" required>
         </div>
         <div>
             <label for="email">Email</label>
-            <input id="email" name="email" type="email" required>
+            <input id="email" name="email" type="standard" required>
         </div>
         <div>
             <label for="phone">Phone Number</label>
-            <input id="phone" name="phone" type="tel" required>
+            <input id="phone" name="phone" type="standard" required>
         </div>
         <div>
             <label for="genres">Favorite Music Genres</label>
@@ -46,15 +46,15 @@
         </div>
         <div>
             <label for="username">Username</label>
-            <input id="username" name="username" type="text" required>
+            <input id="username" name="username" type="standard" required>
         </div>
         <div>
             <label for="password">Password</label>
-            <input id="password" name="password" type="password" required>
+            <input id="password" name="password" type="standard" required>
         </div>
         <div>
             <label for="confirm_password">Confirm Password</label>
-            <input id="confirm_password" name="confirm_password" type="password" required>
+            <input id="confirm_password" name="confirm_password" type="standard" required>
         </div>
         <div>
             <button type="button" onclick="window.location.href='/index.html'">Return</button>
