--- a/pages/music/review.html
+++ b/pages/music/review.html
@@ -11,7 +11,7 @@
     <h1>Album Review</h1>
     <p style="color: red;">Search and album cover will be helped by spotify api</p>
     <label for="album-search">Search Album:</label>
-    <input type="text" id="album-search" name="album-search" placeholder="Enter album name">
+    <input id="album-search" name="album-search" type="standard" placeholder="Enter album name">
 
     <div>
         <h2>Album Cover</h2>
@@ -66,7 +66,7 @@
 
     <div>
         <label for="tag">Tag:</label>
-        <input type="text" id="tag" name="tag" placeholder="Enter a tag">
+        <input id="tag" name="tag" type="standard", placeholder="Enter a tag">
     </div>
 
     <div>
