--- a/pages/music/search.html
+++ b/pages/music/search.html
@@ -11,7 +11,7 @@
     <p style="color: red;">Search will be helped by spotify api</p>
     <h1>Album Search</h1>
     <label for="album-search">Search Album:</label>
-    <input type="text" id="album-search" name="album-search" placeholder="Enter album name">
+    <input id="album-search" name="album-search" type="standard" placeholder="Enter album name">
     <div>
         <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
         <button type="button" onclick="window.location.href='/pages/music/album.html'">Search</button>
