finished css and html

--- a/pages/music/search.html
+++ b/pages/music/search.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <p style="color: red;">Search will be helped by spotify api</p>
+    <p type="dev">Search will be helped by spotify api</p>
     <h1>Album Search</h1>
     <label for="album-search">Search Album:</label>
     <input id="album-search" name="album-search" type="standard" placeholder="Enter album name">
