--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="/pages/music/search.html">Search</a>
       <a href="/pages/user/profile.html">Profile</a>
       <a href="/pages/user/edit_profile.html">Edit Profile</a>
-      <a href="/pages/user/feed.html">feed</a>
+      <a href="/pages/user/feed.html">Feed</a>
     </nav>
   </main>
 </body>
