--- a/pages/music/album.html
+++ b/pages/music/album.html
@@ -11,13 +11,13 @@
 
     <div>
 
-        <p style="color: red;">Data from here will be from spotify api</p>
+        <p type="dev">Data from here will be from spotify api</p>
 
         <h1>IGOR</h1>
         <h3>by Tyler, the Creator</h3>
         <img src="igor.jpg" alt="Album Art" width="200" height="200">
         <p>Award-winning album by Tyler, the Creator, released in 2019.</p>
-        <p style="color: red;">Data from here will be in DB</p>
+        <p type="dev">Data from here will be in DB</p>
         <p>Average Rating: ★★★★☆ (4.5)</p>
         <p>Total Reviews: 1500</p>
         <button type="button" onclick="window.location.href='/music/review.html'">Write a Review</button>
@@ -25,7 +25,7 @@
     <hr>  
 
     <div>
-        <p style="color: red;">Data from here will be in DB</p>
+        <p type="dev">Data from here will be in DB</p>
         <h2>Reviews</h2>
         <div>
             <h3>Great Album!</h3>
