--- a/pages/music/review.html
+++ b/pages/music/review.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Album Review</h1>
-    <p style="color: red;">Search and album cover will be helped by spotify api</p>
+    <p type="dev">Search and album cover will be helped by spotify api</p>
     <label for="album-search">Search Album:</label>
     <input id="album-search" name="album-search" type="standard" placeholder="Enter album name">
 
@@ -17,40 +17,42 @@
         <h2>Album Cover</h2>
         <img src="https://via.placeholder.com/200x200?text=Album+Cover" alt="Album Cover" width="200" height="200">
     </div>
-    <p style="color: red;">Data from here will stored be in DB</p>
+    <p type="dev">Data from here will stored be in DB</p>
 
     <div>
         <h2>Rating</h2>
-        <label>
-            <input type="radio" name="rating" value="0.5"> 0.5
-        </label>
-        <label>
-            <input type="radio" name="rating" value="1"> 1
-        </label>
-        <label>
-            <input type="radio" name="rating" value="1.5"> 1.5
-        </label>
-        <label>
-            <input type="radio" name="rating" value="2"> 2
-        </label>
-        <label>
-            <input type="radio" name="rating" value="2.5"> 2.5
-        </label>
-        <label>
-            <input type="radio" name="rating" value="3"> 3
-        </label>
-        <label>
-            <input type="radio" name="rating" value="3.5"> 3.5
-        </label>
-        <label>
-            <input type="radio" name="rating" value="4"> 4
-        </label>
-        <label>
-            <input type="radio" name="rating" value="4.5"> 4.5
-        </label>
-        <label>
-            <input type="radio" name="rating" value="5"> 5
-        </label>
+        <div class="rating-group">
+            <label>
+                <input type="radio" name="rating" value="0.5"> 0.5
+            </label>
+            <label>
+                <input type="radio" name="rating" value="1"> 1
+            </label>
+            <label>
+                <input type="radio" name="rating" value="1.5"> 1.5
+            </label>
+            <label>
+                <input type="radio" name="rating" value="2"> 2
+            </label>
+            <label>
+                <input type="radio" name="rating" value="2.5"> 2.5
+            </label>
+            <label>
+                <input type="radio" name="rating" value="3"> 3
+            </label>
+            <label>
+                <input type="radio" name="rating" value="3.5"> 3.5
+            </label>
+            <label>
+                <input type="radio" name="rating" value="4"> 4
+            </label>
+            <label>
+                <input type="radio" name="rating" value="4.5"> 4.5
+            </label>
+            <label>
+                <input type="radio" name="rating" value="5"> 5
+            </label>
+        </div>
     </div>
 
     <div>
