--- a/pages/user/profile.html
+++ b/pages/user/profile.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <p style="color: red;">Data here will be in DB</p>
+    <p type="dev">Data here will be in DB</p>
     <h1>Hey John</h1>
     <img src="/images/blank_pfp.jpg" alt="Profile Photo" width="150" height="150">
     <ul>
