--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header>
     <h1>Welcome to polyrythmd</h1>
     <p>for the music critic in all of us</p>
+    <a href="https://github.com/Gabeyocum28/startup.git">My Github Repo</a>
   </header>
   <main>
     <nav>
