--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to polyrythmd</h1>
+    <h1>Welcome to polyrhythmd</h1>
     <p>for the music critic in all of us</p>
     <a href="https://github.com/Gabeyocum28/startup.git">My Github Repo</a>
   </header>
