fixed header, main, footer

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
       <a href="/pages/user/feed.html">Feed</a>
     </nav>
   </main>
+  <footer>
+    <p>&copy; 2025 polyrhythmd. All rights reserved.</p>
+</footer>
 </body>
 </html>
