--- a/pages/music/album.html
+++ b/pages/music/album.html
@@ -8,41 +8,47 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-
-    <div>
-
+    <header type="banner">
+        <h1 type="banner">Polyrhythmd</h1>
+        <button type="button aura" onclick="window.location.href='/index.html'">Home</button>
+    </header>
+    <main>
         <p type="dev">Data from here will be from spotify api</p>
-
-        <h1>IGOR</h1>
-        <h3>by Tyler, the Creator</h3>
-        <img src="igor.jpg" alt="Album Art" width="200" height="200">
-        <p>Award-winning album by Tyler, the Creator, released in 2019.</p>
-        <p type="dev">Data from here will be in DB</p>
-        <p>Average Rating: ★★★★☆ (4.5)</p>
-        <p>Total Reviews: 1500</p>
-        <button type="button" onclick="window.location.href='/music/review.html'">Write a Review</button>
-    </div>
-    <hr>  
-
-    <div>
-        <p type="dev">Data from here will be in DB</p>
-        <h2>Reviews</h2>
         <div>
-            <h3>Great Album!</h3>
-            <p>★★★★☆</p>
-            <p>This album is a masterpiece. The production quality and lyrical depth are outstanding.</p>
-            <p>- MusicLover123</p>
+            <h1>IGOR</h1>
+            <h3>by Tyler, the Creator</h3>
+            <img src="igor.jpg" alt="Album Art" width="200" height="200">
+            <p>Award-winning album by Tyler, the Creator, released in 2019.</p>
+            <p type="dev">Data from here will be in DB</p>
+            <p>Average Rating: ★★★★☆ (4.5)</p>
+            <p>Total Reviews: 1500</p>
+            <button type="button" onclick="window.location.href='/music/review.html'">Write a Review</button>
+        </div>
+        <hr>  
+
+        <div>
+            <p type="dev">Data from here will be in DB</p>
+            <h2>Reviews</h2>
+            <div>
+                <h3>Great Album!</h3>
+                <p>★★★★☆</p>
+                <p>This album is a masterpiece. The production quality and lyrical depth are outstanding.</p>
+                <p>- MusicLover123</p>
+            </div>
+            <div>
+                <h3>Not my style</h3>
+                <p>★★☆☆☆</p>
+                <p>I found the album to be a bit too experimental for my taste, but I can see why others enjoy it.</p>
+                <p>- IndieFan456</p>
+            </div>
+            <!-- More reviews can be added here -->
         </div>
         <div>
-            <h3>Not my style</h3>
-            <p>★★☆☆☆</p>
-            <p>I found the album to be a bit too experimental for my taste, but I can see why others enjoy it.</p>
-            <p>- IndieFan456</p>
+            <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
         </div>
-        <!-- More reviews can be added here -->
-    </div>
-    <div>
-        <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
-    </div>
+    </main>
+    <footer>
+        <p>&copy; 2025 polyrhythmd. All rights reserved.</p>
+    </footer>
 </body>
 </html>
