--- a/pages/music/search.html
+++ b/pages/music/search.html
@@ -9,12 +9,21 @@
 </head>
 <body>
     <p type="dev">Search will be helped by spotify api</p>
-    <h1>Album Search</h1>
-    <label for="album-search">Search Album:</label>
-    <input id="album-search" name="album-search" type="standard" placeholder="Enter album name">
-    <div>
-        <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
-        <button type="button" onclick="window.location.href='/pages/music/album.html'">Search</button>
-    </div>
+    <header type="banner">
+        <h1 type="banner">Polyrhythmd</h1>
+        <button type="button aura" onclick="window.location.href='/index.html'">Home</button>
+    </header>
+    <main>
+        <h1>Search</h1>
+        <label for="album-search">Search Album:</label>
+        <input id="album-search" name="album-search" type="standard" placeholder="Enter album name">
+        <div>
+            <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
+            <button type="button" onclick="window.location.href='/pages/music/album.html'">Search</button>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2025 polyrhythmd. All rights reserved.</p>
+    </footer>
 </body>
 </html>
