--- a/pages/user/profile.html
+++ b/pages/user/profile.html
@@ -8,18 +8,28 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <p type="dev">Data here will be in DB</p>
-    <h1>Hey John</h1>
-    <img src="/images/blank_pfp.jpg" alt="Profile Photo" width="150" height="150">
-    <ul>
-        <li><strong>Username:</strong> johndoe</li>
-        <li><strong>Email:</strong> johndoe@example.com</li>
-        <li><strong>Full Name:</strong> John Doe</li>
-        <li><strong>Date of Birth:</strong> 2000-01-01</li>
-        <li><strong>Phone:</strong> (555) 123-4567</li>
-        <li><strong>Favorite Genres:</strong> Rock, Jazz, Classical</li>
-    </ul>
-    <button onclick="window.location.href='/pages/user/edit_profile.html'">Edit Profile</button>
-    <button onclick="window.location.href='/index.html'">Logout</button>
+    <header type="banner">
+        <h1 type="banner">Polyrhythmd</h1>
+        <button type="button aura" onclick="window.location.href='/index.html'">Home</button>
+    </header>
+    <main>
+        <h1>Profile</h1>
+        <p type="dev">Data here will be in DB</p>
+        <h1>Hey John</h1>
+        <img src="/images/blank_pfp.jpg" alt="Profile Photo" width="150" height="150">
+        <ul>
+            <li><strong>Username:</strong> johndoe</li>
+            <li><strong>Email:</strong> johndoe@example.com</li>
+            <li><strong>Full Name:</strong> John Doe</li>
+            <li><strong>Date of Birth:</strong> 2000-01-01</li>
+            <li><strong>Phone:</strong> (555) 123-4567</li>
+            <li><strong>Favorite Genres:</strong> Rock, Jazz, Classical</li>
+        </ul>
+        <button onclick="window.location.href='/pages/user/edit_profile.html'">Edit Profile</button>
+        <button onclick="window.location.href='/index.html'">Logout</button>
+    </main>
+    <footer>
+        <p>&copy; 2025 polyrhythmd. All rights reserved.</p>
+    </footer>
 </body>
 </html>
