moved around files for react

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <title>Startup Landing Page</title>
-  <link rel="icon" href="polyrhythmd_orange_pink_gradient.ico" />
+  <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
   <header>
@@ -15,15 +15,15 @@
   </header>
   <main>
     <nav>
-      <a href="/pages/about.html">About</a>
-      <a href="/pages/auth/register.html">Register</a>
-      <a href="/pages/auth/login.html">Login</a>
-      <a href="/pages/music/album.html">Album</a>
-      <a href="/pages/music/review.html">Review</a>
-      <a href="/pages/music/search.html">Search</a>
-      <a href="/pages/user/profile.html">Profile</a>
-      <a href="/pages/user/edit_profile.html">Edit Profile</a>
-      <a href="/pages/user/feed.html">Feed</a>
+      <a href="/src/about/about.html">About</a>
+      <a href="/src/register/register.html">Register</a>
+      <a href="/src/login/login.html">Login</a>
+      <a href="/src/album/album.html">Album</a>
+      <a href="/src/review/review.html">Review</a>
+      <a href="/src/search/search.html">Search</a>
+      <a href="/src/profile/profile.html">Profile</a>
+      <a href="/src/edit/edit.html">Edit Profile</a>
+      <a href="/src/feed/feed.html">Feed</a>
     </nav>
   </main>
   <footer>
