--- a/src/album/album.html
+++ b/src/album/album.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Album Viewer</title>
-    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
     <header type="banner">
@@ -22,7 +22,7 @@
             <p type="dev">Data from here will be in DB</p>
             <p>Average Rating: ★★★★☆ (4.5)</p>
             <p>Total Reviews: 1500</p>
-            <button type="button" onclick="window.location.href='/music/review.html'">Write a Review</button>
+            <button type="button" onclick="window.location.href='/src/review/review.html'">Write a Review</button>
         </div>
         <hr>  
 
@@ -44,7 +44,7 @@
             <!-- More reviews can be added here -->
         </div>
         <div>
-            <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
+            <button type="button" onclick="window.location.href='/src/feed/feed.html'">Back</button>
         </div>
     </main>
     <footer>
