--- a/src/feed/feed.html
+++ b/src/feed/feed.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Social Media Feed</title>
-    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
     <p type="dev">Data from here will be in DB</p>
@@ -91,9 +91,9 @@
             <aside class="feed-sidebar">
                 <div class="sidebar-section">
                     <h2>Quick Actions</h2>
-                    <button type="button" onclick="window.location.href='/pages/user/profile.html'">View Profile</button>
-                    <button type="button" onclick="window.location.href='/pages/music/search.html'">Search Albums</button>
-                    <button type="button" onclick="window.location.href='/pages/music/review.html'">Write a Review</button>
+                    <button type="button" onclick="window.location.href='/src/profile/profile.html'">View Profile</button>
+                    <button type="button" onclick="window.location.href='/src/search/search.html'">Search Albums</button>
+                    <button type="button" onclick="window.location.href='/src/review/review.html'">Write a Review</button>
                 </div>
                 
                 <p type="dev">Data from here will be from spotify api</p>
