--- a/src/login/login.html
+++ b/src/login/login.html
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
     <title>Login</title>
-    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
     <p type="dev">Data from here will be checked in DB for login</p>
@@ -22,8 +22,8 @@
                 <input id="password" name="password" type="standard" placeholder="Password" required>
             </div>
             <div>
-                <button type="button aura" onclick="window.location.href='/pages/user/profile.html'">Log in</button>
-                <button type="button aura" onclick="window.location.href='/pages/auth/register.html'">Register</button>
+                <button type="button aura" onclick="window.location.href='/src/profile/profile.html'">Log in</button>
+                <button type="button aura" onclick="window.location.href='/src/register/register.html'">Register</button>
             </div>
         </form>
     </main>
