--- a/src/profile/profile.html
+++ b/src/profile/profile.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>User Profile</title>
-    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
     <header type="banner">
@@ -16,7 +16,7 @@
         <h1>Profile</h1>
         <p type="dev">Data here will be in DB</p>
         <h1>Hey John</h1>
-        <img src="/images/blank_pfp.jpg" alt="Profile Photo" width="150" height="150">
+        <img src="/public/images/blank_pfp.jpg" alt="Profile Photo" width="150" height="150">
         <ul>
             <li><strong>Username:</strong> johndoe</li>
             <li><strong>Email:</strong> johndoe@example.com</li>
@@ -25,7 +25,7 @@
             <li><strong>Phone:</strong> (555) 123-4567</li>
             <li><strong>Favorite Genres:</strong> Rock, Jazz, Classical</li>
         </ul>
-        <button onclick="window.location.href='/pages/user/edit_profile.html'">Edit Profile</button>
+        <button onclick="window.location.href='/src/edit/edit.html'">Edit Profile</button>
         <button onclick="window.location.href='/index.html'">Logout</button>
     </main>
     <footer>
