--- a/src/register/register.html
+++ b/src/register/register.html
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
     <title>Register</title>
-    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
     <p type="dev">Data from here will be stored in DB four auth</p>
@@ -63,7 +63,7 @@
             </div>
             <div>
                 <button type="button aura" onclick="window.location.href='/index.html'">Return</button>
-                <button type="button aura" onclick="window.location.href='/pages/user/profile.html'">Register</button>
+                <button type="button aura" onclick="window.location.href='/src/profile/profile.html'">Register</button>
             </div>
         </form>
     </main>
