--- a/src/review/review.html
+++ b/src/review/review.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Album Review</title>
-    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
     <p type="dev">Search and album cover will be helped by spotify api</p>
@@ -77,7 +77,7 @@
         </div>
 
         <div>
-            <button type="submit" onclick="window.location.href='/pages/user/feed.html'">Submit Review</button>
+            <button type="submit" onclick="window.location.href='/src/feed/feed.html'">Submit Review</button>
         </div>
     </main>
     <footer>
