--- a/src/search/search.html
+++ b/src/search/search.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Album Review</title>
-    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
     <p type="dev">Search will be helped by spotify api</p>
@@ -18,8 +18,8 @@
         <label for="album-search">Search Album:</label>
         <input id="album-search" name="album-search" type="standard" placeholder="Enter album name">
         <div>
-            <button type="button" onclick="window.location.href='/pages/user/feed.html'">Back</button>
-            <button type="button" onclick="window.location.href='/pages/music/album.html'">Search</button>
+            <button type="button" onclick="window.location.href='/src/feed/feed.html'">Back</button>
+            <button type="button" onclick="window.location.href='/src/album/album.html'">Search</button>
         </div>
     </main>
     <footer>
